@@ -1,3 +1,7 @@
+* compute recvq/sendq slot size depending on mtu+wirecompat
+  + driver use/pin multiple send pages if sendq slot size > pagesize
+  + driver dmacopy into multiple recv pages if recvq slot size > pagesize
+
 * constify the event queue as MX now does and mmap recvq+eventq's as RO
 
 * only poll what's really need to be polled in the progression loop
